2013-11-10  Sam Varshavchik  <mrsam@courier-mta.com>

	* libs/tcpd/libcouriergnutls.c, libs/tcpd/libcouriertls.c: remove the
	TLS_DHCERTFILE setting, and use TLS_CERTFILE for all functionality.
	Read DH parameters from TLS_CERTFILE, or from the new TLS_DHPARAMS
	environment variable.

	* mkdhparams: New script that generates DH parameters into a standalone
	file.

	* Remove TLS_DHCERTFILE setting from imapd-ssl, pop3d-ssl, esmtpd and
	esmtpd-ssl. Add TLS_DHPARAMS.

	* Update imapd.cnf.openssl, pop3d.cnf.openssl, esmtpd.cnf.openssl,
	set default number of bits for RSA keys to 4096.

2013-10-14  Sam Varshavchik  <mrsam@courier-mta.com>

	* libs/tcpd/libcouriertls.c (tls_create): Add TLSv1_1_method() and
	TLSv1_2 method(), based on patch by Rob Austein <sra@hactrn.net>.

	* pop3d-ssl.dist.in, imapd-ssl.dist.in: Fix up differences in the
	documentation of TLS options in various config files.

4.14.0

2013-07-04  Sam Varshavchik  <mrsam@courier-mta.com>

	* Autotool chain update.

	* imapd.c (mddelete): Reject DELETE folder if the maildir is a symlink.

2013-04-27  Rolf Eike Beer <dakon@users.sf.net>

	* imapd.c (doId): Implement the IMAP ID EXTENSION.

4.13.0

2013-03-09  Sam Varshavchik  <mrsam@courier-mta.com>

	* imap: add explicit mkdirs on PIDFILE directories to startup scripts.

2013-02-20  Sam Varshavchik  <mrsam@courier-mta.com>

	* rfc822: workaround for invalid utf-8 input making libidn go off the
	rails.

4.12.0

2013-01-12 Gordon Messmer <yinyang@eburg.com>

	* tcpd/libcouriergnutls.c (get_server_cert): Fix size of malloced
	buffer.

2012-12-20  Sam Varshavchik  <mrsam@courier-mta.com>

	* configure.in: Fix typo in configure check for setvbuf().

4.11.0

2012-09-05  Sam Varshavchik  <mrsam@courier-mta.com>

	* maildir/maildiraclt.c (maildir_acl_delete): Fix double-free on error
	path of an ENOMEM.

2012-06-22  Sam Varshavchik  <mrsam@courier-mta.com>

	* courier.spec.in: Fix the RPM spec to work around /bin symlink
	breakage in F17.
