@@ -1,3 +1,8 @@
+2013-11-25  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* Fix various compiler warnings about unchecked results from setuid
+	and setgid calls.
+
 5.7.0
 
 2013-08-28  Sam Varshavchik  <mrsam@courier-mta.com>
